--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
     name="description"
-    content="Rohit Azad Web site in react js with pwa configure, React js Developer , JavaScript Developer ,RohitAzd UI Developer"
+    content=" React js Developer "
   />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -31,7 +31,7 @@
     <meta content="https://rohitazad.com" property="og:url">
     <meta content="%PUBLIC_URL%/weatherApp.jpg" property="og:image">
 
-    <title>Weather APP in React js using AXIO and Context  API , useReducer, useState, useContext || Rohit Azad React js/JavaScript Developer || UI Developer || Ram9953878727@gmail.com, 9953878727</title>
+    <title>Weather APP in React js </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
